--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <title>Odin Recipes Project</title>
 </head>
 <body>
-
+  <h1>Odin Recipes</h1>
+  <ul>
+    <li>
+      <a href="./recipes/eggs-benedict.html">Eggs Benedict</a>
+    </li>
+    <li>
+      <a href="./recipes/chicken-tikka-masala.html">Chicken Tikka Masala</a>
+    </li>
+    <li>
+      <a href="./recipes/pumpkin-soup.html">Pumpkin Soup</a>
+    </li>
+  </ul>
 </body>
 </html>
