--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Odin Recipes Project</title>
 </head>
+
 <body>
   <h1>Odin Recipes</h1>
+  <img src="images/cover.jpg" width="500" alt="Piece of pie on a blue plate with an open cookbook beside it.">
   <ul>
     <li>
       <a href="./recipes/eggs-benedict.html">Eggs Benedict</a>
@@ -18,4 +21,5 @@
     </li>
   </ul>
 </body>
+
 </html>
