--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <img src="images/cover.jpg" width="500" alt="Piece of pie on a blue plate with an open cookbook beside it.">
+  <img src="./images/cover.jpg" width="500" alt="Piece of pie on a blue plate with an open cookbook beside it.">
   <ul>
     <li>
       <a href="./recipes/eggs-benedict.html">Eggs Benedict</a>
