Add structure and content to pumpkin-soup.html

--- a/recipes/pumpkin-soup.html
+++ b/recipes/pumpkin-soup.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Pumpkin Soup Recipe</title>
 </head>
+
 <body>
-  
+  <h1>Pumpkin Soup</h1>
+  <img src="../images/pumpkin-soup.jpg" width="400" alt="A plate full of creamy golden orange pumpkin soup.">
+  <h2>Description</h2>
+  <p>This pumpkin soup is deliciously creamy and smooth. Tender onions and garlic give it depth of flavor, and it's
+    lovely seasoned with fresh herbs and spices. It's served at our family's Thanksgiving dinner every year.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 tablespoon olive oil</li>
+    <li>2 cups chopped yellow onion</li>
+    <li>10 whole black peppercorns</li>
+    <li>4 cloves garlic, minced</li>
+    <li>1 teaspoon chopped fresh thyme</li>
+    <li>3 cups pumpkin puree</li>
+    <li>4 cups chicken stock</li>
+    <li>3 tablespoons maple syrup (Optional)</li>
+    <li>¾ teaspoon kosher salt</li>
+    <li>¼ teaspoon ground nutmeg (Optional)</li>
+    <li>¼ teaspoon ground cinnamon (Optional)</li>
+    <li>½ cup heavy whipping cream</li>
+    <li>2 tablespoons chopped fresh parsley</li>
+  </ul>
+  <h2>Steps</h2>
+  <ol>
+    <li>Heat olive oil in a large pot over medium-high. Add onion and cook, stirring occasionally, until onion is
+      browned and softened, about 10 minutes. Add peppercorns, garlic, and thyme, and cook, stirring often, until
+      fragrant and slightly browned, about 2 minutes.</li>
+    <li>Stir in pumpkin puree; cook, stirring occasionally, until puree turns a few shades darker, about 5 minutes. Stir
+      in chicken stock, maple syrup, salt, nutmeg, and cinnamon. Bring to a simmer over medium-low. Simmer, uncovered,
+      and stirring occasionally, until slightly reduced and flavors meld, about 30 minutes.</li>
+    <li>Transfer soup to a blender in batches; secure lid on blender and remove center piece to allow steam to escape.
+      Place a clean towel over opening; blend until smooth, about 30 seconds per batch. Return soup to the pot and stir
+      in heavy cream. Cook over medium until heated through, about 4 minutes.</li>
+    <li>Return soup to the pot and stir in heavy cream. Cook over medium until heated through, about 4 minutes.</li>
+    <li>Ladle soup into bowls and garnish with fresh parsley.</li>
+  </ol>
+  <p><a href="../index.html">Home</a></p>
 </body>
+
 </html>
